--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "babel-preset-env": "^1.6.0"
   },
   "scripts": {
-    "start": "babel-node src"
+    "start": "babel-node src",
+    "moment": "babel-node src/moment-test.js"
   },
   "dependencies": {
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
+    "mongoose": "^4.12.3",
     "puppeteer": "^0.12.0"
   }
 }
